--- a/src/app/shared/pages/home/home.component.html
+++ b/src/app/shared/pages/home/home.component.html
@@ -1,4 +1,11 @@
-<div class="container-fluid">
-    <p>home works!</p>
-    <button (click)="goToTranslator()">Go!</button>
+<div class="container-fluid d-flex align-items-center">
+    <div class="overlay"></div>
+    <div class="row position-relative">
+        <div class="col-md-12">
+            <h1 class="text-light title">Hand Gesture App</h1>
+        </div>
+        <div class="col-md-12">
+            <button type="button" class="btn btn-dark" (click)="goToTranslator()">Let's start!</button>
+        </div>
+    </div>
 </div>
