--- a/src/app/shared/features/sign-translator/sign-translator.component.html
+++ b/src/app/shared/features/sign-translator/sign-translator.component.html
@@ -1,1 +1,11 @@
-<p>sign-translator works!</p>
+<div class="main-container">
+    <div class="camera-container">
+        <video #video autoplay playsinline></video>
+        <canvas #canvas></canvas>
+    </div>
+
+    <div class="text-display">
+        <h2>Letra Detectada:</h2>
+        <p>{{ detectedText }}</p>
+    </div>
+</div>
