--- a/src/app/shared/features/sign-translator/sign-translator.component.css
+++ b/src/app/shared/features/sign-translator/sign-translator.component.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    background-image: url('/images/blur.webp');
+    background-image: url('../../../assets/blur.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
